--- a/src/app/voucher/voucher.component.html
+++ b/src/app/voucher/voucher.component.html
@@ -95,7 +95,7 @@
         </div>
         <div class="col-md-1">
           <input type="text" class="form-control inp-border-bottom" name="cgstAmount" id="cgstAmount" [(ngModel)]="voucher.cgstAmount"
-            (change)="calculateVoucherTotal()" />
+            (change)="calculateVoucherTotal()" *ngIf="selVendorGstnId!=''"/>
         </div>
         <div class="col-md-2">
         </div>
@@ -104,14 +104,14 @@
         </div>
         <div class="col-md-1">
           <input type="text" class="form-control inp-border-bottom" name="tdsPercent" id="tdsPercent" [(ngModel)]="voucher.tdsPercent"
-          />
+          *ngIf="selVendorPanId!=''" />
         </div>
         <div class="col-md-2 field-labels">
           TDS Amount
         </div>
         <div class="col-md-1">
           <input type="text" class="form-control inp-border-bottom" name="tdsAmount" id="tdsAmount" [(ngModel)]="voucher.tdsAmount"
-            (change)="calculateVoucherTotal()" />
+            (change)="calculateVoucherTotal()" *ngIf="selVendorPanId!=''" />
         </div>
       </div>
 
@@ -122,7 +122,7 @@
         </div>
         <div class="col-md-1">
           <input type="text" class="form-control inp-border-bottom" name="sgstAmount" id="sgstAmount" [(ngModel)]="voucher.sgstAmount"
-            (change)="calculateVoucherTotal()" />
+            (change)="calculateVoucherTotal()" *ngIf="selVendorGstnId!=''"/>
         </div>
         <div class="col-md-2">
         </div>
@@ -143,7 +143,7 @@
         </div>
         <div class="col-md-1">
           <input type="text" class="form-control inp-border-bottom" name="igstAmount" id="igstAmount" [(ngModel)]="voucher.igstAmount"
-            (change)="calculateVoucherTotal()" />
+            (change)="calculateVoucherTotal()" *ngIf="selVendorGstnId!=''" />
         </div>
         <div class="col-md-2">
         </div>
