Voucher changes - AvailCredit and deductTds

--- a/src/app/voucher/voucher.component.html
+++ b/src/app/voucher/voucher.component.html
@@ -65,9 +65,11 @@
       <hr/>
 
       <div class="row">
-        <div class="col-md-12 border-right field-labels">
+        <div class="col-md-1 field-labels">
           Particulars
-          <textarea rows="2" type="text" class="form-control underlined" name="particulars" id="particulars" [(ngModel)]="voucher.particulars">
+        </div>
+        <div class="col-md-10 border-right field-labels">
+          <textarea rows="1" type="text" class="form-control underlined" name="particulars" id="particulars" [(ngModel)]="voucher.particulars">
             </textarea>
         </div>
 
@@ -87,6 +89,8 @@
           Deductions
         </div>
 
+
+
       </div>
       <hr/>
       <div class="row">
@@ -95,24 +99,32 @@
         </div>
         <div class="col-md-1">
           <input type="text" class="form-control inp-border-bottom" name="cgstAmount" id="cgstAmount" [(ngModel)]="voucher.cgstAmount"
-            (change)="calculateVoucherTotal()" *ngIf="selVendorGstnId!=''"/>
+            (change)="calculateVoucherTotal()" *ngIf="selVendorGstnId!=''" />
         </div>
         <div class="col-md-2">
         </div>
-        <div class="col-md-2 field-labels">
+        <input type="checkbox" name="deductTds" id="deductTds" data-md-icheck [checked]="voucher.deductTds" [(ngModel)]="voucher.deductTds" (change)="tdsDeductOption($event)" *ngIf="selVendorPanId!=''"/>
+        <div class="col-md-1 field-labels" *ngIf="selVendorPanId!=''">
+          Deduct TDS
+        </div>
+
+        <div class="col-md-2 field-labels" *ngIf="voucher.deductTds || selVendorPanId!=''">
           TDS Percentage
         </div>
-        <div class="col-md-1">
+        <div class="col-md-1" *ngIf="voucher.deductTds || selVendorPanId!=''">
           <input type="text" class="form-control inp-border-bottom" name="tdsPercent" id="tdsPercent" [(ngModel)]="voucher.tdsPercent"
-          *ngIf="selVendorPanId!=''" />
+            *ngIf="voucher.deductTds || selVendorPanId!=''" />
         </div>
-        <div class="col-md-2 field-labels">
+        <div class="col-md-2 field-labels" *ngIf="voucher.deductTds || selVendorPanId!=''">
           TDS Amount
         </div>
-        <div class="col-md-1">
+        <div class="col-md-1" *ngIf="voucher.deductTds || selVendorPanId!=''">
           <input type="text" class="form-control inp-border-bottom" name="tdsAmount" id="tdsAmount" [(ngModel)]="voucher.tdsAmount"
-            (change)="calculateVoucherTotal()" *ngIf="selVendorPanId!=''" />
+            (change)="calculateVoucherTotal()" *ngIf="voucher.deductTds || selVendorPanId!=''" />
         </div>
+
+
+
       </div>
 
       <hr/>
@@ -122,7 +134,7 @@
         </div>
         <div class="col-md-1">
           <input type="text" class="form-control inp-border-bottom" name="sgstAmount" id="sgstAmount" [(ngModel)]="voucher.sgstAmount"
-            (change)="calculateVoucherTotal()" *ngIf="selVendorGstnId!=''"/>
+            (change)="calculateVoucherTotal()" *ngIf="selVendorGstnId!=''" />
         </div>
         <div class="col-md-2">
         </div>
@@ -145,22 +157,11 @@
           <input type="text" class="form-control inp-border-bottom" name="igstAmount" id="igstAmount" [(ngModel)]="voucher.igstAmount"
             (change)="calculateVoucherTotal()" *ngIf="selVendorGstnId!=''" />
         </div>
-        <div class="col-md-2">
+        <div class="col-md-3" *ngIf="selVendorGstnId!=''">
+          <input type="checkbox" name="availGstInputCredit" id="availGstInputCredit" data-md-icheck [(ngModel)]="voucher.availGstInputCredit" (change)="availInputCreditOption($event)" />
+            Avail GST Input Credit
+          
         </div>
-
-        <div class="col-md-1 field-labels">
-          Amount Due
-        </div>
-        <div class="col-md-1">
-          <input type="text" class="form-control inp-border-bottom" name="totalAmount" id="totalAmount" [(ngModel)]="voucher.totalAmount"
-          />
-        </div>
-        <button type="button" class="btn btn-info float-right" (click)="calculateVoucherTotal()">Calculate</button>
-
-      </div>
-
-      <hr/>
-      <div class="row">
         <div class="col-md-1 field-labels">
           Reimbursement:
         </div>
@@ -168,8 +169,7 @@
           <input type="text" class="form-control inp-border-bottom" name="reimbursement" id="reimbursement" [(ngModel)]="voucher.reimbursement"
             (change)="calculateVoucherTotal()" />
         </div>
-        <div class="col-md-2">
-        </div>
+
         <div class="col-md-1 field-labels">
           Deduction Remarks
         </div>
@@ -179,6 +179,7 @@
         </div>
 
       </div>
+
       <hr/>
       <div class="row">
         <div class="col-md-1 field-labels">
@@ -190,25 +191,45 @@
         </div>
         <div class="col-md-2">
         </div>
+        <div class="col-md-1 field-labels">
+          Total Amount Due
+        </div>
+        <div class="col-md-1">
+          <input type="text" class="form-control inp-border-bottom" name="totalAmount" id="totalAmount" [(ngModel)]="voucher.totalAmount"
+          />
+        </div>
+        <button type="button" class="btn btn-info float-right" (click)="calculateVoucherTotal()">Calculate</button>
 
+
+
+      </div>
+      <hr/>
+      <div class="row">
         <div class="col-md-3 field-labels">
           <label for="file-logo" [class.active]="true">Voucher Bill</label>
           <input type="file" id="file-logo" (change)="onFileChange($event)" />
           <input type="hidden" name="logo" id="logo" [(ngModel)]="voucher.voucherImg" />
           <img height="100" id="img-logo" [src]="voucher.voucherImg" />
         </div>
+        <div class="col-md-2">
+        </div>
+
+        <div class="card-body">
+          <div class="row float-left">
+            <button class="btn btn-success" type="submit"> <i class="fa fa-save"></i>&nbsp;Save</button>
+          </div>
+        </div>
+
 
       </div>
     </div>
   </div>
 
-  <div class="card mt-4 wow fadeIn">
-    <div class="card-body">
-      <div class="row float-right">
-        <button class="btn btn-success" type="submit"> <i class="fa fa-save"></i>&nbsp;Save</button>
-      </div>
-    </div>
-  </div>
+
+
+
+
+
 
 
 </form>
