--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -14,42 +14,42 @@
 
     <!-- Links -->
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item" *appHasRole="{'role':['ADMIN','USER'],'userRole':userRole}">
+      <li class="nav-item" *appHasRole="{'role':['COMPANY_ADMIN','COMPANY_USER'],'userRole':userRole}">
         <a routerLink="/dashboard" class="waves-effect nav-link">
           <i class="fas fa-tachometer-alt mr-1"></i>Dashboard
         </a>
       </li>
       <!-- Dropdown -->
-      <li class="nav-item dropdown" *appHasRole="{'role':['ADMIN','USER'],'userRole':userRole}">
+      <li class="nav-item dropdown" *appHasRole="{'role':['COMPANY_ADMIN','COMPANY_USER'],'userRole':userRole}">
         <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
           aria-expanded="false"><i class="fas fa-money-bill mr-1"></i>Invoice</a>
         <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-          <a *appHasRole="{'role':['ADMIN','USER'],'userRole':userRole}" routerLink="/invoiceNew/0" class="waves-effect dropdown-item">
+          <a *appHasRole="{'role':['COMPANY_ADMIN','COMPANY_USER'],'userRole':userRole}" routerLink="/invoiceNew/0" class="waves-effect dropdown-item">
             <i class="fas fa-money-bill-wave-alt mr-1"></i>New Service ProformA</a>
-          <a routerLink="/invoiceManu/0" class="waves-effect dropdown-item" *appHasRole="{'role':['ADMIN','USER'],'userRole':userRole}">
+          <a routerLink="/invoiceManu/0" class="waves-effect dropdown-item" *appHasRole="{'role':['COMPANY_ADMIN','COMPANY_USER'],'userRole':userRole}">
             <i class="fas fa-money-bill-wave mr-1"></i>New Manufacturing ProformA</a>
-          <a *appHasRole="{'role':['ADMIN','USER'],'userRole':userRole}" routerLink="/invoice-search" lass="waves-effect dropdown-item"><i class="fa fa-search mr-1"></i>Search</a>
+          <a *appHasRole="{'role':['COMPANY_ADMIN','COMPANY_USER'],'userRole':userRole}" routerLink="/invoice-search" lass="waves-effect dropdown-item"><i class="fa fa-search mr-1"></i>Search</a>
         </div>
       </li>
-      <li class="nav-item dropdown" *appHasRole="{'role':['ADMIN','USER'],'userRole':userRole}">
+      <li class="nav-item dropdown" *appHasRole="{'role':['COMPANY_ADMIN','COMPANY_USER'],'userRole':userRole}">
         <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
           aria-expanded="false"><i class="fas fa-money-check-alt mr-1"></i>Voucher</a>
         <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-          <a *appHasRole="{'role':['ADMIN','USER'],'userRole':userRole}" routerLink="/voucherNew/0" class="waves-effect dropdown-item"><i class="fas fa-money-check mr-1"></i> New </a>
-          <a *appHasRole="{'role':['ADMIN','USER'],'userRole':userRole}" routerLink="/voucher-search" lass="waves-effect dropdown-item"><i class="fa fa-search mr-1"></i>Search</a>
+          <a *appHasRole="{'role':['COMPANY_ADMIN','COMPANY_USER'],'userRole':userRole}" routerLink="/voucherNew/0" class="waves-effect dropdown-item"><i class="fas fa-money-check mr-1"></i> New </a>
+          <a *appHasRole="{'role':['COMPANY_ADMIN','COMPANY_USER'],'userRole':userRole}" routerLink="/voucher-search" lass="waves-effect dropdown-item"><i class="fa fa-search mr-1"></i>Search</a>
         </div>
       </li>
-      <li class="nav-item dropdown" *appHasRole="{'role':['ADMIN'],'userRole':userRole}">
+      <li class="nav-item dropdown" *appHasRole="{'role':['COMPANY_ADMIN'],'userRole':userRole}">
         <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
           aria-expanded="false"><i class="fas fa-chalkboard mr-1"></i>Report</a>
         <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-          <a *appHasRole="{'role':['ADMIN','USER'],'userRole':userRole}" routerLink="/invoiceReport" class="waves-effect dropdown-item"><i class="fas fa-file-invoice mr-1"></i>Invoice </a>
+          <a *appHasRole="{'role':['COMPANY_ADMIN','COMPANY_USER'],'userRole':userRole}" routerLink="/invoiceReport" class="waves-effect dropdown-item"><i class="fas fa-file-invoice mr-1"></i>Invoice </a>
         </div>
       </li>
     </ul>
 
     <ul class="navbar-nav ml-auto nav-flex-icons">
-        <li class="nav-item dropdown" *appHasRole="{'role':['ADMIN'],'userRole':userRole}">
+        <li class="nav-item dropdown" *appHasRole="{'role':['COMPANY_ADMIN'],'userRole':userRole}">
             <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-1" data-toggle="dropdown" aria-haspopup="true"
               aria-expanded="false">
               <i class="fas fa-hammer"></i>
