--- a/src/app/voucher/voucher.component.html
+++ b/src/app/voucher/voucher.component.html
@@ -193,6 +193,7 @@
     <div class="card-body">
       <div class="row float-right">
         <button class="btn btn-success" type="submit"> <i class="fa fa-save"></i>&nbsp;Save</button>
+        <button class="btn btn-warning" *appHasRole="{'role':['COMPANY_ADMIN'],'userRole':userRole}" (click)="approveVoucher()" > <i class="fas fa-check-double"></i>&nbsp;Approve</button>
       </div>
     </div>
   </div>
