Role access and FYA screen

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -36,7 +36,8 @@
           aria-expanded="false"><i class="fas fa-money-check-alt mr-1"></i>Voucher</a>
         <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
           <a *appHasRole="{'role':['COMPANY_ADMIN','COMPANY_USER'],'userRole':userRole}" routerLink="/voucherNew/0" class="waves-effect dropdown-item"><i class="fas fa-money-check mr-1"></i> New </a>
-          <a *appHasRole="{'role':['COMPANY_ADMIN','COMPANY_USER'],'userRole':userRole}" routerLink="/voucher-search" lass="waves-effect dropdown-item"><i class="fa fa-search mr-1"></i>Search</a>
+          <a *appHasRole="{'role':['COMPANY_ADMIN','COMPANY_USER'],'userRole':userRole}" routerLink="/voucher-fya" class="waves-effect dropdown-item"><i class="fa fa-check-double mr-1"></i>FYA</a>
+          <a *appHasRole="{'role':['COMPANY_ADMIN','COMPANY_USER'],'userRole':userRole}" routerLink="/voucher-search" class="waves-effect dropdown-item"><i class="fa fa-search mr-1"></i>Search</a>
         </div>
       </li>
       <li class="nav-item dropdown" *appHasRole="{'role':['COMPANY_ADMIN'],'userRole':userRole}">
