--- a/src/app/voucher/voucher.search.component.html
+++ b/src/app/voucher/voucher.search.component.html
@@ -7,7 +7,7 @@
   {{errorMessage}}
 </div>
 <div class="searchBox" *ngIf="visible" [@slideInOut]>
-  <form (ngSubmit)="submit()" name="searchForm">
+  <form (ngSubmit)="submit(0)" name="searchForm">
     <div class="card">
       <div class="card-header stylish-color-dark white-text">
         Search
@@ -104,6 +104,19 @@
         </tr>
       </tbody>
     </table>
+  </div>
+  <div class="card-footer">
+    <!--Table runat="server" ID="tblPrint" width="595px" heigh="842px" Border="1" />-->
+    <nav aria-label="Page navigation example">
+      <ul class="pagination">
+        <li class="page-item"><button class="btn btn-info btn-sm" [disabled]="searchResult.first" (click)="submit(0)">First</button></li>
+        <li class="page-item" *ngFor="let pageNo of numbers">
+          <button class="btn btn-info btn-sm" (click)="submit(pageNo)">{{pageNo+1}}</button>
+        </li>
+        <li class="page-item"><button class="btn btn-info btn-sm" [disabled]="searchResult.last" (click)="submit(searchResult.totalElements-1)">Last</button></li>
+      </ul>
+    </nav>
+    <small style="color:#432fb5">Page Size is {{searchResult.size}}.</small>
   </div>
 </div>
 
