--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark pl-3 primary-color">
 
   <!-- Navbar brand -->
-  <a class="navbar-brand waves-effect bg-white p-1 m-0" href="#"><img src="/img/logo-blue.png" class="img-fluid logo-img" alt=""></a>
+  <a class="navbar-brand waves-effect p-0 m-0 mr-1" href="#"><img src="/img/logo-white.png" class="img-fluid logo-img" alt=""></a>
 
   <!-- Collapse button -->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
