--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -79,7 +79,7 @@
           <i class="fas fa-random"></i>
         </a>
           <div class="dropdown-menu dropdown-menu-right dropdown-default" aria-labelledby="navbarDropdownMenuLink-1">
-            <a *ngFor="let comp of userCompanies" class="dropdown-item waves-effect waves-light" href="/selectedCompany?id={{comp.companyId}}">{{comp.companyName}} as <br/><small>{{comp.roleCode}}</small></a>
+              <a class="dropdown-item waves-effect waves-light" href="/">Switch Company?</a>
           </div>
       </li>
     </ul>
